--- a/cuentas/templates/perfil.html
+++ b/cuentas/templates/perfil.html
@@ -1,12 +1,13 @@
-hola
-{{user.username}}
-{{user.is_staff}}
+{% extends 'base.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% block titulo %}Editar Perfil{% endblock titulo %}
 
-{{user.perfil.facebook}}
-{{user.groups}}
-{{perms.all}}
-{{user.username.firt_name}}
-
-{{username.first_name}}
-
-{{user.all}}
+<h1>Editar perfil</h1>
+<div class="form-group">
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form | crispy}}
+        <button class="btn btn-secondary">Enviar</button>
+    </form>
+</div>
