--- a/posts/templates/post.html
+++ b/posts/templates/post.html
@@ -34,6 +34,8 @@
     </div>
 </div>
 
+
+
 <section class="site-section py-lg">
     <div class="container">
 
@@ -42,8 +44,11 @@
             <div class="col-md-12 col-lg-8 main-content">
 
                 <div class="post-content-body box">
-                    {{ post.contenido |safe }}
+                    {{ post.contenido |safe }}                    
                 </div>
+
+                {% include 'basepost.html' %}
+
             </div>
 
             <!-- END main-content -->
