--- a/posts/templates/basepost.html
+++ b/posts/templates/basepost.html
@@ -1,30 +1,5 @@
 {% block basepost %}
-
-<!-- <div class="px-4 py-2">
-    <div class="flex items-center justify-between">
-        <div class="flex flex-row-reverse items-center">
-            
-            <span class="text-xs ml-2 text-gray-500 dark:text-dark-txt">{{post.likes.all.count}} Likes</span>
-            <div class="rounded-full grid place-items-center text-xl -ml-1 text-blue-500">
-                <i class='bx bxs-like'></i>
-            </div>
-            
-        </div>
-        <div class="flex flex-row-reverse items-center">
-            
-            <span class="text-xs ml-2 text-gray-500 dark:text-dark-txt">{{post.dislikes.all.count}} Dislikes</span>
-            <div class="rounded-full grid place-items-center text-xl -ml-1 text-red-500">
-                <i class='bx bxs-dislike'></i>
-            </div>
-            
-        </div>
-        <div class="text-gray-500 dark:text-dark-txt">
-        
-            {% comment %} <span>90 comments</span>
-            <span>66 Shares</span> {% endcomment %}
-        </div>
-    </div>
-</div> -->
+{% load crispy_forms_tags %}
 
 <div class="p-4" x-data="{open:false}">
     <div class="col-12 border border-1 border-primary p-2 rounded-3">
@@ -51,7 +26,7 @@
             </div>
             <div class="p-2">
                 <span class="text-xs">Comentar</span>
-                <button class="btn btn-outline-primary redondeado {% if not user.is_authenticated %} disabled{% endif %}" type="submit">
+                <button class="btn btn-outline-primary redondeado {% if not user.is_authenticated %} disabled{% endif %}" type="button" data-bs-toggle="modal" data-bs-target="#modalComentario">
                     <i class="fa-regular fa-message"></i>
                 </button>
             </div>
@@ -62,4 +37,36 @@
 </div>
 
 
+{% for coment in comentarios %}
+    <code>{{coment.comentario}} </code>   
+    
+{% endfor %}
+    
+    
+
+<!-- Modal -->
+<div class="modal fade" id="modalComentario" tabindex="-1" aria-labelledby="modalComentarioLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalComentarioLabel">Escribir comentario</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form action="" method="post">
+            <div class="modal-body">                
+                {% csrf_token %}
+                {{ form.media }}                                  
+                {{ form | crispy }}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary redondeado" data-bs-dismiss="modal">Salir</button>
+                <button type="submit" id="botonVentanaModal" class="btn btn-primary redondeado">Guardar</button>
+            </div>
+        </form>
+    
+      </div>
+    </div>
+  </div>
+
 {% endblock %}
+
