--- a/posts/templates/editarcomentario.html
+++ b/posts/templates/editarcomentario.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block titulo %}Editar Comentario{% endblock titulo %}
+{% block titulo %}Editar Post{% endblock titulo %}
 
 
 <!-- main content -->
@@ -11,14 +11,14 @@
     <div class="container">
         <div class="card">
             <div class="card-header">
-              <h4>Editar Comentario</h4>
+              <h4>Editar Post</h4>
             </div>
             <div class="card-body">
                 <form action="" method="post" enctype="multipart/form-data">
                     {% csrf_token %}              
                     {{form | crispy }}
-                    <button class="btn btn-danger redondeado" type="submit">Editar</button>            
-                    <a href="{% url 'posts:detalle_post' object.post.slug %}" class="btn btn-secondary redondeado">Cancelar</a>
+                    <button class="btn btn-info redondeado" type="submit">Editar</button>            
+                    <a href="{% url 'posts:detalle_post' post.slug %}" class="btn btn-secondary redondeado">Cancelar</a>
                 </form>              
               
             </div>
