--- a/cuentas/templates/perfil.html
+++ b/cuentas/templates/perfil.html
@@ -7,7 +7,7 @@
 
 
 <div class="container d-flex justify-content-center">
-    <div class="card border-info mb-3" style="max-width: 48rem;">
+    <div class="card border-info col-12 mb-3" style="max-width: 48rem;">
         <div class="card-header">Perfil de {{ user }}</div>
         <div class="card-body">
           <article class="card h-100 bg-secondary">
